--- a/des.css
+++ b/des.css
@@ -1,41 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-body {
-  background: #f1f1f1;
-  margin: 0;
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
+.login-border{
+    margin-top: 20%;
+    border: none;
+    background-color: #f1f1f1;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
 }
-h1 {
-  font-size: 2em;
-  font-family:arial;
-}
-.hero {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  margin: 10em auto;
-  padding: 3em 0;
-  width: 400px;
-}
-
-input {
-  font-size: 1.2em;
-  margin: 8px 0;
-}
-
-input::-webkit-input-placeholder {
-  padding: 0 .3em;
-}
-
-input:-ms-input-placeholder {
-  padding: 0 .3em;
-}
-
-input::-ms-input-placeholder {
-  padding: 0 .3em;
-}
-
-input::placeholder {
-  padding: 0 .3em;
-}
-/*# sourceMappingURL=main.css.map */
