--- a/des.css
+++ b/des.css
@@ -5,11 +5,8 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-<<<<<<< HEAD
     border-radius: 30px;
-}
-=======
     border-radius: 50px;
 /*     thom  */
+/*     lumerio  */
 }
->>>>>>> upstream/main
