--- a/des.css
+++ b/des.css
@@ -91,8 +91,25 @@ h1{
 
 .login-info button:hover{
     background: #f76c6c;
+   
 }
-    border-radius: 30px;
-    border-radius: 30px;
+/*--For Responsiveness--*/
+
+@media screen and (max-width: 780px){
+
+    .left{
+        display: none;
+        align-items: center;
+    }
+    .leftside{
+        display:none;
+    }
+    .login-info{
+        width: 100%;
+        justify-content: center;
+    }
 }
+
+
+
 
