--- a/des.css
+++ b/des.css
@@ -27,6 +27,7 @@ h1{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 80px;
     width: 100%;
 }
 
@@ -96,10 +97,10 @@ h1{
     }
     .right{
         justify-content: center;
-        background: linear-gradient(0deg, rgb(240, 231, 231) 0%, rgba(251,83,90,1) 100%);
+        
     }
     .right h1{
-        color: white;
+        color: #FD5757;
         font-size: 40px;
     }
     .right p{
@@ -114,13 +115,78 @@ h1{
 
 /* for register.php */
 .left-register{
-    border: 1px solid black;
     height: 100%;
-    background-color: orange;
+    background-color: #FD5757;
 }
+
+
 .right-register{
-    border: 1px solid black;
     height: 100%;
-    background-color: pink;
-    padding: 2%;
+    color: white;
+    padding: 6.5em 2em;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    background: #2F2E41;
+}
+
+.right-register h1{
+    margin-left: 20px;
+    margin-bottom: 30px;
+}
+
+/* Register inputs */
+.right-register input{
+    margin: 10px 20px;
+    width: 80%;
+    padding:18px;
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    height: 1.2rem;
+}
+
+.right-register label{
+    margin: 0 20px;
+}
+
+/* Register inputs when active/clicked */
+.right-register input:focus, textarea:focus, select:focus{
+    outline-color:white;
+    padding:18px;
+}
+
+.right-register button{
+    background: #fd5757;
+    padding: 8px;
+    color: white;
+    font-weight: 600;
+    width: 80%;
+    margin:20px 20px;
+    border-radius: 4px;
+    border-style: none;
+}
+
+.right-register button:hover{
+    background: #f76c6c;
+   
+}
+
+/* for mobile view */
+@media screen and (max-width: 768px){
+
+    .right-register{
+        justify-content: center;
+        align-items: center;
+        padding: 2.5em 2.5em;
+    
+    }
+
+    .right-register input{
+        width: 85%;
+    }
+
+    .right-register button{
+        width: 85%;
+    }
+
 }
