--- a/des.css
+++ b/des.css
@@ -116,15 +116,27 @@ h1{
 /* for register.php */
 .left-register{
     height: 100%;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    box-shadow: 0 16px 24px 0 rgba(0,0,0,0.2);
     background-color: #FD5757;
 }
+
+.container-register{
+    margin: 6em 8em;
+    border-radius: 8px;
+}
+
 
 
 .right-register{
     height: 100%;
     color: white;
-    padding: 6.5em 2em;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    padding: 4em 2em;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+
+    box-shadow: 0 16px 24px 0 rgba(0,0,0,0.2);
     background: #2F2E41;
 }
 
@@ -144,7 +156,7 @@ h1{
     border: 1px solid #ccc;
     height: 1.2rem;
 }
-
+/* margin only left and right for label */
 .right-register label{
     margin: 0 20px;
 }
@@ -174,11 +186,26 @@ h1{
 /* for mobile view */
 @media screen and (max-width: 768px){
 
+    .container-register{
+        margin: 0;
+        padding: 0;
+        border-radius: 8px;
+    }
+
     .right-register{
         justify-content: center;
         align-items: center;
         padding: 2.5em 2.5em;
+        text-align: center;
+    }
     
+    .right-register label{
+        float: left;
+        margin: 0 30px;
+    }
+
+    .right-register h1{
+        text-align: center;
     }
 
     .right-register input{
