--- a/des.css
+++ b/des.css
@@ -745,3 +745,152 @@ background:#3d3b53;
     border-radius: 20px;
     color: white;
 }
+
+/* for introduction part */
+.hrimg img{
+    max-width: 100%;
+    max-height: 100%;
+}
+.bgwave-red > svg {
+    display: block;
+}
+.title h1{ 
+color: black;
+text-align: left !important;
+}
+.title p{
+    color: gray;
+    text-align: left;
+}
+.title button{
+    background-color: #FD5757;
+    border: none;
+    width: 250px;
+    height: 40px;
+    border-radius: 20px;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+}
+.title{
+    margin-top: 20%;
+    text-align: center;
+}
+.bgwave-red h1{
+    color: white;
+    background-color: #FD5757;
+    text-align: center;
+    padding-top: 5%;
+    padding-bottom: 10%;
+    font-weight: 600;
+}
+
+/* for usage */
+.features{
+    margin-top: -5%;
+    background-color: #FD5757;
+    padding-bottom: 10%;
+}
+.easy{
+    text-align: center;
+    border: none;
+    padding: 5%;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2%;
+}
+.easy h2,.recruit h2,.security h2{
+    background-color: whitesmoke;
+    color: black;
+}
+.recruit{
+    text-align: center;
+    border: none;
+    padding: 5%;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2%;
+}
+.security{
+    text-align: center;
+    border: none;
+    padding: 5%;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2%;
+    padding-bottom: 10%;
+}
+
+/* for download */
+.download{
+    background-color: #2f2e41;
+}
+.d-img{
+    text-align: center;
+}
+.d-img img{
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20%;
+}
+.d-title{
+    text-align: center;
+}
+.d-title h1{
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 20%;
+    color: white;
+}
+.d-title h5{
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10%;
+    color: white;
+    width: 70%;
+    text-align: left;
+}
+.d-title button{
+    background-color: #FD5757;
+    border: none;
+    width: 250px;
+    height: 40px;
+    border-radius: 20px;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+}
+/* for testimonial */
+.testimonial{
+    text-align: center;
+}
+.testimonial h1{
+    text-align: center;
+    color: #2f2e41;
+    font-weight: 600;
+}
+.testimonial img{
+    margin-top: 5%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.testimonial p{
+    width: 50%;
+    color: gray;
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.testimonial h6{
+    color: gray;
+}
