--- a/des.css
+++ b/des.css
@@ -759,7 +759,7 @@ color: black;
 text-align: left !important;
 }
 .title p{
-    color: gray;
+    color:#707070;
     text-align: left;
 }
 .title button{
