--- a/des.css
+++ b/des.css
@@ -746,7 +746,7 @@ background:#3d3b53;
 
 .navbar-brand p{
     color:#2F2E41;
-    font-size: 2.8em;
+    font-size: 2.5em;
     margin-left: 10%;
 }
 
@@ -817,33 +817,48 @@ text-align: left !important;
 .easy{
     text-align: center;
     border: none;
-    padding: 5%;
+    padding: 2em 1.5em;
     border-radius: 10px;
     background-color: whitesmoke;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2%;
+    transition: all 500ms;
 }
+
+.easy:hover{
+    transform: translateY(-2.5px) scale(1.1);
+}
+
 .easy h2,.recruit h2,.security h2{
     background-color: whitesmoke;
     color: black;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
+
 .recruit{
     text-align: center;
     border: none;
-    padding: 5%;
+    padding: 2em 1.5em;
     border-radius: 10px;
     background-color: whitesmoke;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2%;
+    transition: all 500ms;
 }
+
+.recruit:hover{
+    transform: translateY(-2.5px) scale(1.1);
+}
+
 .security{
     text-align: center;
     border: none;
-    padding: 5%;
+    padding: 2em 1.5em;
     border-radius: 10px;
     background-color: whitesmoke;
     width: 80%;
@@ -851,6 +866,11 @@ text-align: left !important;
     margin-right: auto;
     margin-bottom: 2%;
     padding-bottom: 10%;
+    transition: all 500ms;
+}
+
+.security:hover{
+    transform: translateY(-2.5px) scale(1.1);
 }
 
 /* for download */
@@ -945,27 +965,30 @@ text-align: left !important;
 .about-frame{
     border-radius: 10px;
     border:none;
-    padding: 5%;
+    padding: 2em 1.5em;
     padding-bottom: 40%;
     background-color: white;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     height: 100%;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
     margin-top: -120px;
+    margin-bottom: 20px;
+    /* smooth animations in hovering */
+    transition: all 500ms;
 }
+/* Hover effects */
+.about-frame:hover{
+    transform: translateY(-2.5px) scale(1.05);
+}
+
 .about-frame h4{
     margin-top: 10%;
 }
 .about-frame p{
     margin-top: 10%;
     word-wrap: break-word;
-}
-.about-frame img{
-    margin-top: 2%;
-    width: 50%;
-    height: 50%;
 }
 
 /* for footer part */
@@ -981,9 +1004,20 @@ text-align: left !important;
 .footer-title span{
     color: #2f2e41;
 }
+
+.flink a{
+    text-decoration: none;
+    color: #707070;
+}
+
+.flink a:hover{
+    color: #f56464;
+}
+
 .flink p{
     color: white;
     padding-top: 50%;
+    font-weight: 600;
 }
 
 @media screen and (max-width: 1000px){
